Fixed some bug and removed 1 toast message
There was a bug when you submit a quiz and a simple toast which contained tou answers and your mark. I replaced that toast with a alert dialog.

--- a/PythonGuru/app/src/main/res/values/strings.xml
+++ b/PythonGuru/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="faq_6">Does this app contains ads?</string>
     <string name="a_6">No there aren\'t any ads.</string>
     <string name="help_button">Help ?</string>
+    <string name="logout_btn">logout</string>
 </resources>
