--- a/PythonGuru/app/src/main/res/values/strings.xml
+++ b/PythonGuru/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="question_type_txt">Question Type</string>
     <string name="back_btn2">Back</string>
     <string name="back_btn1">Back</string>
+    <string name="back_text">Back</string>
 </resources>
